package gui.storeageClasses;

import java.util.List;

public class Round {
    public int numberOfRound;
    public boolean gruen;
    public List<Fight> fights;

    public Round() {};
}
